test/mpi/errors/Makefile.sm
#SUBDIRS = util attr basic datatype info init rma topo @threadsdir@ .
SUBDIRS_otherlangs = cxx f77 f90
SUBDIRS = coll comm group pt2pt datatype rma spawn topo io @otherlangs@

testing:
	../runtests -srcdir=$(srcdir) -tests=testlist \
		   -mpiexec=@MPIEXEC@ \
		   -xmlfile=summary.xml
